[project]
name = "todo-app"
version = "0.1.0"
description = "Todo application with React frontend"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.14.3",
    "chardet>=5.2.0",
    "python-pptx>=1.0.2",
    "langgraph>=1.0.2",
    "langchain>=1.0.3",
    "langchain-core>=1.0.2",
    "langchain-openai>=1.0.1",
    "coze-coding-dev-sdk>=0.5.12",
    "psycopg2-binary>=2.9.11",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["."]
